test/errors/literals_error/zs/multiline_string_literal_error.zs
package multiline_string_literal_error;

const string MULTILINE_STRING_LITERAL = "This is forbidden multiline string literal
                                         which is not enclosed by quotes in each row.";
